# computerSystemsArchitecture

./: .gitignore  LICENSE  README.md
Homework/HW1 _ Animals/: CMakeLists.txt  animal.cpp  animal.h  bird.h  carnivore.h  container.h  fish.h
Homework/hw1- Animals/: CMakeLists.txt  README.md  animal.cpp  animal.h  beast.cpp  beast.h  bird.cpp  bird.h  container.cpp  container.h  fish.cpp  fish.h  main.cpp  rnd.h
Homework/hw1- Animals/results/: output1.txt  output2.txt
Homework/hw1- Animals/tests/: test01.txt  test04.txt
Homework/hw1-Animals/: CMakeLists.txt  beast.h  bird.cpp  container.h  main.cpp
Homework/hw1-Animals/tests/: test03.txt
Homework/hw2-OOP/: CMakeLists.txt  README.md  animal.cpp  animal.h  beast.cpp  beast.h  beastEnum.h  bird.cpp  bird.h  container.cpp  container.h  fish.cpp  fish.h  habitatEnum.h  main.cpp  rnd.h
Homework/hw2-OOP/results/: output1.txt  output2.txt
Homework/hw2-OOP/tests/: test01.txt
Homework/hw3-python/: README.md  animal.py  beast.py  bird.py  container.py  extender.py  fish.py  main.py  read_str_array.py
Homework/hw3-python/results/: output.txt
Homework/hw3-python/tests/: test02.txt  test05.txt
